<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="false"
            android:max="100"
            android:progress="0" />

        <TextView
            android:id="@+id/progressText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/percent"
            android:gravity="center"
            android:padding="4dp" />
    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="8dp">

        <ProgressBar
            android:id="@+id/progressBar1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageButton
                android:id="@+id/attach_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/AddFileButton"
                android:minHeight="48dp"
                android:src="@drawable/add_file"
                tools:ignore="ImageContrastCheck" />

            <EditText
                android:id="@+id/chat_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:hint="@string/chat_input_hint"
                android:ems="10"
                android:inputType="textMultiLine"
                android:maxLines="6"
                android:minHeight="48dp"
                android:scrollbars="vertical" />

            <ImageButton
                android:id="@+id/send_button"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:contentDescription="@string/TransferFilesButton"
                android:minWidth="48dp"
                android:src="@drawable/send_file"
                tools:ignore="ImageContrastCheck" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</LinearLayout>